// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text-index Indexes a local non-gz gff3 file 1`] = `
"au9.g1000 WyJHcm91cDEuMzY6MTY4MjU1Li4xNzM5NTEiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzEwMDAiLCJhdTkuZzEwMDAiXQ==,1
au9.g1000.t1 WyJHcm91cDEuMzY6MTY4MjU1Li4xNzM5NTEiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzEwMDAudDEiLCJhdTkuZzEwMDAudDEiXQ==,1
au9.g1001 WyJHcm91cDEuMzY6MTc0MzY0Li4xNzYzMDQiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzEwMDEiLCJhdTkuZzEwMDEiXQ==,1
au9.g1001.t1 WyJHcm91cDEuMzY6MTc0MzY0Li4xNzYzMDQiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzEwMDEudDEiLCJhdTkuZzEwMDEudDEiXQ==,1
au9.g1002 WyJHcm91cDEuMzY6MTc2OTc1Li4xODA3NDQiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzEwMDIiLCJhdTkuZzEwMDIiXQ==,1
au9.g1002.t1 WyJHcm91cDEuMzY6MTc2OTc1Li4xODA3NDQiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzEwMDIudDEiLCJhdTkuZzEwMDIudDEiXQ==,1
au9.g1003 WyJHcm91cDEuMzY6MTgwODQ2Li4xODQ4NTQiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzEwMDMiLCJhdTkuZzEwMDMiXQ==,1
au9.g1003.t1 WyJHcm91cDEuMzY6MTgwODQ2Li4xODQ4NTQiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzEwMDMudDEiLCJhdTkuZzEwMDMudDEiXQ==,1
au9.g1004 WyJHcm91cDEuMzY6MTg3MTE1Li4xOTUyMjQiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzEwMDQiLCJhdTkuZzEwMDQiXQ==,1
au9.g1004.t"
`;

exports[`text-index Indexes a local non-gz gff3 file 2`] = `
"NhZmZvbGQiLCJhdTkuZzk5NSIsImF1OS5nOTk1Il0=,1
au9.g995.t1 WyJHcm91cDEuMzY6MTQ3NTIwLi4xNTA0MTQiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzk5NS50MSIsImF1OS5nOTk1LnQxIl0=,1
au9.g996 WyJHcm91cDEuMzY6MTUwNTM5Li4xNTI4NTQiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzk5NiIsImF1OS5nOTk2Il0=,1
au9.g996.t1 WyJHcm91cDEuMzY6MTUwNTM5Li4xNTI4NTQiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzk5Ni50MSIsImF1OS5nOTk2LnQxIl0=,1
au9.g997 WyJHcm91cDEuMzY6MTU0NDk1Li4xNTYyOTQiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzk5NyIsImF1OS5nOTk3Il0=,1
au9.g997.t1 WyJHcm91cDEuMzY6MTU0NDk1Li4xNTYyOTQiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzk5Ny50MSIsImF1OS5nOTk3LnQxIl0=,1
au9.g998 WyJHcm91cDEuMzY6MTU3NDk1Li4xNjQ2ODUiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzk5OCIsImF1OS5nOTk4Il0=,1
au9.g998.t1 WyJHcm91cDEuMzY6MTU3NDk1Li4xNjQ2ODUiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzk5OC50MSIsImF1OS5nOTk4LnQxIl0=,1
au9.g999 WyJHcm91cDEuMzY6MTY1NTU4Li4xNjY5ODQiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzk5OSIsImF1OS5nOTk5Il0=,1
au9.g999.t1 WyJHcm91cDEuMzY6MTY1NTU4Li4xNjY5ODQiLCJhdTlfc2NhZmZvbGQiLCJhdTkuZzk5OS50MSIsImF1OS5nOTk5LnQxIl0=,1
"
`;

exports[`text-index Indexes a local non-gz gff3 file 3`] = `144314`;

exports[`text-index Indexes a local non-gz gff3 file 4`] = `
"au9.g0000000000
"
`;

exports[`text-index tracks Indexes a local gz gff3 file 1`] = `
"agt221.3 WyJjdGdBOjc1MDAuLjgwMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3QyMjEuMyIsIk1hdGNoNCJd,1
agt221.5 WyJjdGdBOjEwNTAuLjE1MDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3QyMjEuNSIsbnVsbF0=,1 WyJjdGdBOjEwNTAuLjczMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3QyMjEuNSIsIk1hdGNoMyJd,2 WyJjdGdBOjUwMDAuLjU1MDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3QyMjEuNSIsbnVsbF0=,3 WyJjdGdBOjcwMDAuLjczMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3QyMjEuNSIsbnVsbF0=,4
agt767.3 WyJjdGdBOjgwMDAuLjkwMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q3NjcuMyIsIk1hdGNoNiJd,1
agt767.5 WyJjdGdBOjExNTAuLjE1MDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q3NjcuNSIsbnVsbF0=,1 WyJjdGdBOjExNTAuLjcyMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q3NjcuNSIsIk1hdGNoNSJd,2 WyJjdGdBOjUwMDAuLjU1MDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q3NjcuNSIsbnVsbF0=,3 WyJjdGdBOjcwMDAuLjcyMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q3NjcuNSIsbnVsbF0=,4
agt830.3 WyJjdGdBOjU0MTAuLjU1MDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q4MzAuMyIsbnVsbF0=,1 WyJjdGdBOjU0MTAuLjc1MDMiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q4MzAuMyIsIk1hdGNoMiJd,2 WyJjdGdBOjcwMDAuLjc1MDMiLCJnZmYzdGF"
`;

exports[`text-index tracks Indexes a local gz gff3 file 2`] = `
"E1IixudWxsXQ==,4 WyJjdGdBOjQ1MjgxLi40NTM3NSIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,5 WyJjdGdBOjQ1NzExLi40NjA0MSIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,6 WyJjdGdBOjQ2NDI1Li40NjU2NCIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,7 WyJjdGdBOjQ2NzM4Li40NzA4NyIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,8 WyJjdGdBOjQ3MzI5Li40NzU5NSIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,9 WyJjdGdBOjQ3ODU4Li40Nzk3OSIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,10 WyJjdGdBOjQ4MTY5Li40ODQ1MyIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,11 WyJjdGdBOjQwNTE1Li40MDk1NCIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,12 WyJjdGdBOjQxMjUyLi40MTM2NSIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,13 WyJjdGdBOjQxNDkyLi40MTUwNCIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,14 WyJjdGdBOjQxOTQxLi40MjM3NyIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,15 WyJjdGdBOjQyNzQ4Li40Mjk1NCIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,16 WyJjdGdBOjQzNDAxLi40Mzg5NyIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,17
"
`;

exports[`text-index tracks Indexes a local gz gff3 file 3`] = `17144`;

exports[`text-index tracks Indexes a local gz gff3 file 4`] = `
"agt220000000000
"
`;

exports[`text-index tracks Indexes a remote and a local file 1`] = `
"agt221.3 WyJjdGdBOjc1MDAuLjgwMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3QyMjEuMyIsIk1hdGNoNCJd,1
agt221.5 WyJjdGdBOjEwNTAuLjE1MDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3QyMjEuNSIsbnVsbF0=,1 WyJjdGdBOjEwNTAuLjczMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3QyMjEuNSIsIk1hdGNoMyJd,2 WyJjdGdBOjUwMDAuLjU1MDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3QyMjEuNSIsbnVsbF0=,3 WyJjdGdBOjcwMDAuLjczMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3QyMjEuNSIsbnVsbF0=,4
agt767.3 WyJjdGdBOjgwMDAuLjkwMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q3NjcuMyIsIk1hdGNoNiJd,1
agt767.5 WyJjdGdBOjExNTAuLjE1MDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q3NjcuNSIsbnVsbF0=,1 WyJjdGdBOjExNTAuLjcyMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q3NjcuNSIsIk1hdGNoNSJd,2 WyJjdGdBOjUwMDAuLjU1MDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q3NjcuNSIsbnVsbF0=,3 WyJjdGdBOjcwMDAuLjcyMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q3NjcuNSIsbnVsbF0=,4
agt830.3 WyJjdGdBOjU0MTAuLjU1MDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q4MzAuMyIsbnVsbF0=,1 WyJjdGdBOjU0MTAuLjc1MDMiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q4MzAuMyIsIk1hdGNoMiJd,2 WyJjdGdBOjcwMDAuLjc1MDMiLCJnZmYzdGF"
`;

exports[`text-index tracks Indexes a remote and a local file 2`] = `
"E1IixudWxsXQ==,4 WyJjdGdBOjQ1MjgxLi40NTM3NSIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,5 WyJjdGdBOjQ1NzExLi40NjA0MSIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,6 WyJjdGdBOjQ2NDI1Li40NjU2NCIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,7 WyJjdGdBOjQ2NzM4Li40NzA4NyIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,8 WyJjdGdBOjQ3MzI5Li40NzU5NSIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,9 WyJjdGdBOjQ3ODU4Li40Nzk3OSIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,10 WyJjdGdBOjQ4MTY5Li40ODQ1MyIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,11 WyJjdGdBOjQwNTE1Li40MDk1NCIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,12 WyJjdGdBOjQxMjUyLi40MTM2NSIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,13 WyJjdGdBOjQxNDkyLi40MTUwNCIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,14 WyJjdGdBOjQxOTQxLi40MjM3NyIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,15 WyJjdGdBOjQyNzQ4Li40Mjk1NCIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,16 WyJjdGdBOjQzNDAxLi40Mzg5NyIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,17
"
`;

exports[`text-index tracks Indexes a remote and a local file 3`] = `172114`;

exports[`text-index tracks Indexes a remote and a local file 4`] = `
"agt220000000000
au9.g00000005BA
b101.0000026314
"
`;

exports[`text-index tracks Indexes a remote gz gff3 file 1`] = `
"agt221.3 WyJjdGdBOjc1MDAuLjgwMDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0MjIxLjMiLCJNYXRjaDQiXQ==,1
agt221.5 WyJjdGdBOjEwNTAuLjE1MDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0MjIxLjUiLG51bGxd,1 WyJjdGdBOjEwNTAuLjczMDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0MjIxLjUiLCJNYXRjaDMiXQ==,2 WyJjdGdBOjUwMDAuLjU1MDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0MjIxLjUiLG51bGxd,3 WyJjdGdBOjcwMDAuLjczMDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0MjIxLjUiLG51bGxd,4
agt767.3 WyJjdGdBOjgwMDAuLjkwMDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0NzY3LjMiLCJNYXRjaDYiXQ==,1
agt767.5 WyJjdGdBOjExNTAuLjE1MDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0NzY3LjUiLG51bGxd,1 WyJjdGdBOjExNTAuLjcyMDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0NzY3LjUiLCJNYXRjaDUiXQ==,2 WyJjdGdBOjUwMDAuLjU1MDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0NzY3LjUiLG51bGxd,3 WyJjdGdBOjcwMDAuLjcyMDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0NzY3LjUiLG51bGxd,4
agt830.3 WyJjdGdBOjU0MTAuLjU1MDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0ODMwLjMiLG51bGxd,1 WyJjdGdBOj"
`;

exports[`text-index tracks Indexes a remote gz gff3 file 2`] = `
"dGdBOjQ1NzExLi40NjA0MSIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,6 WyJjdGdBOjQ2NDI1Li40NjU2NCIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,7 WyJjdGdBOjQ2NzM4Li40NzA4NyIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,8 WyJjdGdBOjQ3MzI5Li40NzU5NSIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,9 WyJjdGdBOjQ3ODU4Li40Nzk3OSIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,10 WyJjdGdBOjQ4MTY5Li40ODQ1MyIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,11 WyJjdGdBOjQwNTE1Li40MDk1NCIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,12 WyJjdGdBOjQxMjUyLi40MTM2NSIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,13 WyJjdGdBOjQxNDkyLi40MTUwNCIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,14 WyJjdGdBOjQxOTQxLi40MjM3NyIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,15 WyJjdGdBOjQyNzQ4Li40Mjk1NCIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,16 WyJjdGdBOjQzNDAxLi40Mzg5NyIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,17
"
`;

exports[`text-index tracks Indexes a remote gz gff3 file 3`] = `19004`;

exports[`text-index tracks Indexes a remote gz gff3 file 4`] = `
"agt220000000000
"
`;

exports[`text-index tracks Indexes a remote non-gz gff3 file 1`] = `
"au9.g1000 WyJHcm91cDEuMzY6MTY4MjU1Li4xNzM5NTEiLCJvbmxpbmVfYXU5X3NjYWZmb2xkIiwiYXU5LmcxMDAwIiwiYXU5LmcxMDAwIl0=,1
au9.g1000.t1 WyJHcm91cDEuMzY6MTY4MjU1Li4xNzM5NTEiLCJvbmxpbmVfYXU5X3NjYWZmb2xkIiwiYXU5LmcxMDAwLnQxIiwiYXU5LmcxMDAwLnQxIl0=,1
au9.g1001 WyJHcm91cDEuMzY6MTc0MzY0Li4xNzYzMDQiLCJvbmxpbmVfYXU5X3NjYWZmb2xkIiwiYXU5LmcxMDAxIiwiYXU5LmcxMDAxIl0=,1
au9.g1001.t1 WyJHcm91cDEuMzY6MTc0MzY0Li4xNzYzMDQiLCJvbmxpbmVfYXU5X3NjYWZmb2xkIiwiYXU5LmcxMDAxLnQxIiwiYXU5LmcxMDAxLnQxIl0=,1
au9.g1002 WyJHcm91cDEuMzY6MTc2OTc1Li4xODA3NDQiLCJvbmxpbmVfYXU5X3NjYWZmb2xkIiwiYXU5LmcxMDAyIiwiYXU5LmcxMDAyIl0=,1
au9.g1002.t1 WyJHcm91cDEuMzY6MTc2OTc1Li4xODA3NDQiLCJvbmxpbmVfYXU5X3NjYWZmb2xkIiwiYXU5LmcxMDAyLnQxIiwiYXU5LmcxMDAyLnQxIl0=,1
au9.g1003 WyJHcm91cDEuMzY6MTgwODQ2Li4xODQ4NTQiLCJvbmxpbmVfYXU5X3NjYWZmb2xkIiwiYXU5LmcxMDAzIiwiYXU5LmcxMDAzIl0=,1
au9.g1003.t1 WyJHcm91cDEuMzY6MTgwODQ2Li4xODQ4NTQiLCJvbmxpbmVfYXU5X3NjYWZmb2xkIiwiYXU5LmcxMDAzLnQxIiwiYXU5LmcxMDAzLnQxIl0=,1
au9.g1004 WyJHcm91cDEuMzY6MTg3MTE1Li4xOTUyMjQiLCJvbm"
`;

exports[`text-index tracks Indexes a remote non-gz gff3 file 2`] = `
"6MTQ3NTIwLi4xNTA0MTQiLCJvbmxpbmVfYXU5X3NjYWZmb2xkIiwiYXU5Lmc5OTUudDEiLCJhdTkuZzk5NS50MSJd,1
au9.g996 WyJHcm91cDEuMzY6MTUwNTM5Li4xNTI4NTQiLCJvbmxpbmVfYXU5X3NjYWZmb2xkIiwiYXU5Lmc5OTYiLCJhdTkuZzk5NiJd,1
au9.g996.t1 WyJHcm91cDEuMzY6MTUwNTM5Li4xNTI4NTQiLCJvbmxpbmVfYXU5X3NjYWZmb2xkIiwiYXU5Lmc5OTYudDEiLCJhdTkuZzk5Ni50MSJd,1
au9.g997 WyJHcm91cDEuMzY6MTU0NDk1Li4xNTYyOTQiLCJvbmxpbmVfYXU5X3NjYWZmb2xkIiwiYXU5Lmc5OTciLCJhdTkuZzk5NyJd,1
au9.g997.t1 WyJHcm91cDEuMzY6MTU0NDk1Li4xNTYyOTQiLCJvbmxpbmVfYXU5X3NjYWZmb2xkIiwiYXU5Lmc5OTcudDEiLCJhdTkuZzk5Ny50MSJd,1
au9.g998 WyJHcm91cDEuMzY6MTU3NDk1Li4xNjQ2ODUiLCJvbmxpbmVfYXU5X3NjYWZmb2xkIiwiYXU5Lmc5OTgiLCJhdTkuZzk5OCJd,1
au9.g998.t1 WyJHcm91cDEuMzY6MTU3NDk1Li4xNjQ2ODUiLCJvbmxpbmVfYXU5X3NjYWZmb2xkIiwiYXU5Lmc5OTgudDEiLCJhdTkuZzk5OC50MSJd,1
au9.g999 WyJHcm91cDEuMzY6MTY1NTU4Li4xNjY5ODQiLCJvbmxpbmVfYXU5X3NjYWZmb2xkIiwiYXU5Lmc5OTkiLCJhdTkuZzk5OSJd,1
au9.g999.t1 WyJHcm91cDEuMzY6MTY1NTU4Li4xNjY5ODQiLCJvbmxpbmVfYXU5X3NjYWZmb2xkIiwiYXU5Lmc5OTkudDEiLCJhdTkuZzk5OS50MSJd,1
"
`;

exports[`text-index tracks Indexes a remote non-gz gff3 file 3`] = `154970`;

exports[`text-index tracks Indexes a remote non-gz gff3 file 4`] = `
"au9.g0000000000
"
`;

exports[`text-index tracks Indexes a track using only the attributes tag 1`] = `
"b101.2 WyJjdGdBOjEwMDAuLjIwMDAwIiwibm9BdHRyaWJ1dGVzIiwiYjEwMS4yIiwiYjEwMS4yIl0=,1
cds-apple2 WyJjdGdBOjEzMDAwLi4xNzIwMCIsIm5vQXR0cmlidXRlcyIsIkFwcGxlMiIsImNkcy1BcHBsZTIiXQ==,1
eden WyJjdGdBOjEwNTAuLjkwMDAiLCJub0F0dHJpYnV0ZXMiLCJFREVOIiwiRURFTiJd,1
eden.1 WyJjdGdBOjEwNTAuLjkwMDAiLCJub0F0dHJpYnV0ZXMiLCJFREVOLjEiLCJFREVOLjEiXQ==,1
eden.2 WyJjdGdBOjEwNTAuLjkwMDAiLCJub0F0dHJpYnV0ZXMiLCJFREVOLjIiLCJFREVOLjIiXQ==,1
eden.3 WyJjdGdBOjEzMDAuLjkwMDAiLCJub0F0dHJpYnV0ZXMiLCJFREVOLjMiLCJFREVOLjMiXQ==,1
fakesnp1 WyJjdGdBOjEwMDAuLjEwMDAiLCJub0F0dHJpYnV0ZXMiLCJGYWtlU05QIiwiRmFrZVNOUDEiXQ==,1
match1 WyJjdGdBOjEwNTAuLjMyMDIiLCJub0F0dHJpYnV0ZXMiLCJhZ3Q4MzAuNSIsIk1hdGNoMSJd,1
match2 WyJjdGdBOjU0MTAuLjc1MDMiLCJub0F0dHJpYnV0ZXMiLCJhZ3Q4MzAuMyIsIk1hdGNoMiJd,1
match3 WyJjdGdBOjEwNTAuLjczMDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3QyMjEuNSIsIk1hdGNoMyJd,1
match4 WyJjdGdBOjc1MDAuLjgwMDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3QyMjEuMyIsIk1hdGNoNCJd,1
match5 WyJjdGdBOjExNTAuLjcyMDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3Q3NjcuNSIsIk1hdGNoNSJd,1
match6 W"
`;

exports[`text-index tracks Indexes a track using only the attributes tag 2`] = `
"iXQ==,1
eden WyJjdGdBOjEwNTAuLjkwMDAiLCJub0F0dHJpYnV0ZXMiLCJFREVOIiwiRURFTiJd,1
eden.1 WyJjdGdBOjEwNTAuLjkwMDAiLCJub0F0dHJpYnV0ZXMiLCJFREVOLjEiLCJFREVOLjEiXQ==,1
eden.2 WyJjdGdBOjEwNTAuLjkwMDAiLCJub0F0dHJpYnV0ZXMiLCJFREVOLjIiLCJFREVOLjIiXQ==,1
eden.3 WyJjdGdBOjEzMDAuLjkwMDAiLCJub0F0dHJpYnV0ZXMiLCJFREVOLjMiLCJFREVOLjMiXQ==,1
fakesnp1 WyJjdGdBOjEwMDAuLjEwMDAiLCJub0F0dHJpYnV0ZXMiLCJGYWtlU05QIiwiRmFrZVNOUDEiXQ==,1
match1 WyJjdGdBOjEwNTAuLjMyMDIiLCJub0F0dHJpYnV0ZXMiLCJhZ3Q4MzAuNSIsIk1hdGNoMSJd,1
match2 WyJjdGdBOjU0MTAuLjc1MDMiLCJub0F0dHJpYnV0ZXMiLCJhZ3Q4MzAuMyIsIk1hdGNoMiJd,1
match3 WyJjdGdBOjEwNTAuLjczMDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3QyMjEuNSIsIk1hdGNoMyJd,1
match4 WyJjdGdBOjc1MDAuLjgwMDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3QyMjEuMyIsIk1hdGNoNCJd,1
match5 WyJjdGdBOjExNTAuLjcyMDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3Q3NjcuNSIsIk1hdGNoNSJd,1
match6 WyJjdGdBOjgwMDAuLjkwMDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3Q3NjcuMyIsIk1hdGNoNiJd,1
rna-apple3 WyJjdGdBOjE3NDAwLi4yMzAwMCIsIm5vQXR0cmlidXRlcyIsIkFwcGxlMyIsInJuYS1BcHBsZTMiXQ==,1
"
`;

exports[`text-index tracks Indexes a track using only the attributes tag 3`] = `1168`;

exports[`text-index tracks Indexes a track using only the attributes tag 4`] = `
"b101.0000000000
"
`;

exports[`text-index tracks Indexes a track with no attributes in the config 1`] = `
"agt221.3 WyJjdGdBOjc1MDAuLjgwMDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3QyMjEuMyIsIk1hdGNoNCJd,1
agt221.5 WyJjdGdBOjEwNTAuLjE1MDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3QyMjEuNSIsbnVsbF0=,1 WyJjdGdBOjEwNTAuLjczMDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3QyMjEuNSIsIk1hdGNoMyJd,2 WyJjdGdBOjUwMDAuLjU1MDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3QyMjEuNSIsbnVsbF0=,3 WyJjdGdBOjcwMDAuLjczMDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3QyMjEuNSIsbnVsbF0=,4
agt767.3 WyJjdGdBOjgwMDAuLjkwMDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3Q3NjcuMyIsIk1hdGNoNiJd,1
agt767.5 WyJjdGdBOjExNTAuLjE1MDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3Q3NjcuNSIsbnVsbF0=,1 WyJjdGdBOjExNTAuLjcyMDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3Q3NjcuNSIsIk1hdGNoNSJd,2 WyJjdGdBOjUwMDAuLjU1MDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3Q3NjcuNSIsbnVsbF0=,3 WyJjdGdBOjcwMDAuLjcyMDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3Q3NjcuNSIsbnVsbF0=,4
agt830.3 WyJjdGdBOjU0MTAuLjU1MDAiLCJub0F0dHJpYnV0ZXMiLCJhZ3Q4MzAuMyIsbnVsbF0=,1 WyJjdGdBOjU0MTAuLjc1MDMiLCJub0F0dHJpYnV0ZXMiLCJhZ3Q4MzAuMyIsIk1hdGNoMiJd,2 WyJjdGdBOjcwMDAuLjc1MDMiLCJub0F0dHJpYnV0ZXMiLCJhZ3Q4MzAuMyIsbnVsbF0=,3
agt830.5 WyJ"
`;

exports[`text-index tracks Indexes a track with no attributes in the config 2`] = `
"JjdGdBOjQ0Mzk5Li40NDg4OCIsIm5vQXR0cmlidXRlcyIsInNlZzE1IixudWxsXQ==,4 WyJjdGdBOjQ1MjgxLi40NTM3NSIsIm5vQXR0cmlidXRlcyIsInNlZzE1IixudWxsXQ==,5 WyJjdGdBOjQ1NzExLi40NjA0MSIsIm5vQXR0cmlidXRlcyIsInNlZzE1IixudWxsXQ==,6 WyJjdGdBOjQ2NDI1Li40NjU2NCIsIm5vQXR0cmlidXRlcyIsInNlZzE1IixudWxsXQ==,7 WyJjdGdBOjQ2NzM4Li40NzA4NyIsIm5vQXR0cmlidXRlcyIsInNlZzE1IixudWxsXQ==,8 WyJjdGdBOjQ3MzI5Li40NzU5NSIsIm5vQXR0cmlidXRlcyIsInNlZzE1IixudWxsXQ==,9 WyJjdGdBOjQ3ODU4Li40Nzk3OSIsIm5vQXR0cmlidXRlcyIsInNlZzE1IixudWxsXQ==,10 WyJjdGdBOjQ4MTY5Li40ODQ1MyIsIm5vQXR0cmlidXRlcyIsInNlZzE1IixudWxsXQ==,11 WyJjdGdBOjQwNTE1Li40MDk1NCIsIm5vQXR0cmlidXRlcyIsInNlZzE1IixudWxsXQ==,12 WyJjdGdBOjQxMjUyLi40MTM2NSIsIm5vQXR0cmlidXRlcyIsInNlZzE1IixudWxsXQ==,13 WyJjdGdBOjQxNDkyLi40MTUwNCIsIm5vQXR0cmlidXRlcyIsInNlZzE1IixudWxsXQ==,14 WyJjdGdBOjQxOTQxLi40MjM3NyIsIm5vQXR0cmlidXRlcyIsInNlZzE1IixudWxsXQ==,15 WyJjdGdBOjQyNzQ4Li40Mjk1NCIsIm5vQXR0cmlidXRlcyIsInNlZzE1IixudWxsXQ==,16 WyJjdGdBOjQzNDAxLi40Mzg5NyIsIm5vQXR0cmlidXRlcyIsInNlZzE1IixudWxsXQ==,17
"
`;

exports[`text-index tracks Indexes a track with no attributes in the config 3`] = `16252`;

exports[`text-index tracks Indexes a track with no attributes in the config 4`] = `
"agt220000000000
"
`;

exports[`text-index tracks Indexes multiple local gff3 files 1`] = `
"agt221.3 WyJjdGdBOjc1MDAuLjgwMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3QyMjEuMyIsIk1hdGNoNCJd,1
agt221.5 WyJjdGdBOjEwNTAuLjE1MDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3QyMjEuNSIsbnVsbF0=,1 WyJjdGdBOjEwNTAuLjczMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3QyMjEuNSIsIk1hdGNoMyJd,2 WyJjdGdBOjUwMDAuLjU1MDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3QyMjEuNSIsbnVsbF0=,3 WyJjdGdBOjcwMDAuLjczMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3QyMjEuNSIsbnVsbF0=,4
agt767.3 WyJjdGdBOjgwMDAuLjkwMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q3NjcuMyIsIk1hdGNoNiJd,1
agt767.5 WyJjdGdBOjExNTAuLjE1MDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q3NjcuNSIsbnVsbF0=,1 WyJjdGdBOjExNTAuLjcyMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q3NjcuNSIsIk1hdGNoNSJd,2 WyJjdGdBOjUwMDAuLjU1MDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q3NjcuNSIsbnVsbF0=,3 WyJjdGdBOjcwMDAuLjcyMDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q3NjcuNSIsbnVsbF0=,4
agt830.3 WyJjdGdBOjU0MTAuLjU1MDAiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q4MzAuMyIsbnVsbF0=,1 WyJjdGdBOjU0MTAuLjc1MDMiLCJnZmYzdGFiaXhfZ2VuZXMiLCJhZ3Q4MzAuMyIsIk1hdGNoMiJd,2 WyJjdGdBOjcwMDAuLjc1MDMiLCJnZmYzdGF"
`;

exports[`text-index tracks Indexes multiple local gff3 files 2`] = `
"E1IixudWxsXQ==,4 WyJjdGdBOjQ1MjgxLi40NTM3NSIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,5 WyJjdGdBOjQ1NzExLi40NjA0MSIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,6 WyJjdGdBOjQ2NDI1Li40NjU2NCIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,7 WyJjdGdBOjQ2NzM4Li40NzA4NyIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,8 WyJjdGdBOjQ3MzI5Li40NzU5NSIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,9 WyJjdGdBOjQ3ODU4Li40Nzk3OSIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,10 WyJjdGdBOjQ4MTY5Li40ODQ1MyIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,11 WyJjdGdBOjQwNTE1Li40MDk1NCIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,12 WyJjdGdBOjQxMjUyLi40MTM2NSIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,13 WyJjdGdBOjQxNDkyLi40MTUwNCIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,14 WyJjdGdBOjQxOTQxLi40MjM3NyIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,15 WyJjdGdBOjQyNzQ4Li40Mjk1NCIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,16 WyJjdGdBOjQzNDAxLi40Mzg5NyIsImdmZjN0YWJpeF9nZW5lcyIsInNlZzE1IixudWxsXQ==,17
"
`;

exports[`text-index tracks Indexes multiple local gff3 files 3`] = `161458`;

exports[`text-index tracks Indexes multiple local gff3 files 4`] = `
"agt220000000000
au9.g00000005BA
b101.0000023974
"
`;

exports[`text-index tracks Indexes multiple remote gff3 file 1`] = `
"agt221.3 WyJjdGdBOjc1MDAuLjgwMDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0MjIxLjMiLCJNYXRjaDQiXQ==,1
agt221.5 WyJjdGdBOjEwNTAuLjE1MDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0MjIxLjUiLG51bGxd,1 WyJjdGdBOjEwNTAuLjczMDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0MjIxLjUiLCJNYXRjaDMiXQ==,2 WyJjdGdBOjUwMDAuLjU1MDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0MjIxLjUiLG51bGxd,3 WyJjdGdBOjcwMDAuLjczMDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0MjIxLjUiLG51bGxd,4
agt767.3 WyJjdGdBOjgwMDAuLjkwMDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0NzY3LjMiLCJNYXRjaDYiXQ==,1
agt767.5 WyJjdGdBOjExNTAuLjE1MDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0NzY3LjUiLG51bGxd,1 WyJjdGdBOjExNTAuLjcyMDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0NzY3LjUiLCJNYXRjaDUiXQ==,2 WyJjdGdBOjUwMDAuLjU1MDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0NzY3LjUiLG51bGxd,3 WyJjdGdBOjcwMDAuLjcyMDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0NzY3LjUiLG51bGxd,4
agt830.3 WyJjdGdBOjU0MTAuLjU1MDAiLCJvbmxpbmVfZ2ZmM3RhYml4X2dlbmVzIiwiYWd0ODMwLjMiLG51bGxd,1 WyJjdGdBOj"
`;

exports[`text-index tracks Indexes multiple remote gff3 file 2`] = `
"dGdBOjQ1NzExLi40NjA0MSIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,6 WyJjdGdBOjQ2NDI1Li40NjU2NCIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,7 WyJjdGdBOjQ2NzM4Li40NzA4NyIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,8 WyJjdGdBOjQ3MzI5Li40NzU5NSIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,9 WyJjdGdBOjQ3ODU4Li40Nzk3OSIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,10 WyJjdGdBOjQ4MTY5Li40ODQ1MyIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,11 WyJjdGdBOjQwNTE1Li40MDk1NCIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,12 WyJjdGdBOjQxMjUyLi40MTM2NSIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,13 WyJjdGdBOjQxNDkyLi40MTUwNCIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,14 WyJjdGdBOjQxOTQxLi40MjM3NyIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,15 WyJjdGdBOjQyNzQ4Li40Mjk1NCIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,16 WyJjdGdBOjQzNDAxLi40Mzg5NyIsIm9ubGluZV9nZmYzdGFiaXhfZ2VuZXMiLCJzZWcxNSIsbnVsbF0=,17
"
`;

exports[`text-index tracks Indexes multiple remote gff3 file 3`] = `173974`;

exports[`text-index tracks Indexes multiple remote gff3 file 4`] = `
"agt220000000000
au9.g0000000662
b101.00000263BC
"
`;
